--- a/Afra Tabs final/templates/tabs/album_detail.html
+++ b/Afra Tabs final/templates/tabs/album_detail.html
@@ -20,7 +20,7 @@
                             {{ album.artist.name }}
                     </a>
                     </p>
-                    <p class="album-year">Released {{ album.release_year }}</p>
+                    <p class="album-year">{{ album.release_year }}</p>
                     
                     <div class="album-stats">
                         <div class="album-stat-box">
